--- a/doc/vchanger.8
+++ b/doc/vchanger.8
@@ -2,12 +2,12 @@
 .\"     Title: vchanger
 .\"    Author: Josh Fisher <jfisher@jaybus.com>
 .\" Generator: DocBook XSL Stylesheets v1.78.1 <http://docbook.sf.net/>
-.\"      Date: 06/03/2015
+.\"      Date: 06/11/2018
 .\"    Manual: vchanger Manual
-.\"    Source: vchanger 1.0.1
+.\"    Source: vchanger 1.0.2
 .\"  Language: English
 .\"
-.TH "VCHANGER" "8" "06/03/2015" "vchanger 1\&.0\&.1" "vchanger Manual"
+.TH "VCHANGER" "8" "06/11/2018" "vchanger 1\&.0\&.2" "vchanger Manual"
 .\" -----------------------------------------------------------------
 .\" * Define some portability stuff
 .\" -----------------------------------------------------------------
@@ -142,7 +142,7 @@ command to Bacula if required\&.
 .sp
 \fBBacula Interaction\fR
 .sp
-By default, vcahgner will invoke bconsole and issue commands to Bacula when certain operator actions are needed\&. When anything happens that changes the current set of volume files being used, vchanger will invoke bconsole and issue an \fIupdate slots\fR command\&. For example, when the operator attaches a removable drive defined as one of the changer\(cqs magazines, the volume files on the removable drive must be mapped to virtual slots\&. Since the volume\-to\-slot mapping will have changed, Bacula will need to be informed of the change via the \fIupdate slots\fR command\&. The \fBREFRESH\fR command can be invoked to force vchanger to update state info and trigger \fIupdate slots\fR if needed\&.
+By default, vcahgner will invoke bconsole and issue commands to Bacula when certain operator actions are needed\&. When anything happens that changes the current set of volume files being used, (the virtual slot to volume file mapping), vchanger will invoke bconsole and issue an \fIupdate slots\fR command\&. For example, when the operator attaches a removable drive defined as one of the changer\(cqs magazines, the volume files on the removable drive must be mapped to virtual slots\&. Since the slot\-to\-volume mapping will have changed, Bacula will need to be informed of the change via the \fIupdate slots\fR command\&. The \fBREFRESH\fR command can be invoked to force vchanger to update state info and trigger \fIupdate slots\fR if needed\&.
 .sp
 Additionally, when new volumes are created with the \fBCREATEVOLS\fR command, vchanger will invoke bconsole and issue a \fIlabel barcodes\fR command to write volume labels on the newly created volume files\&.
 .SH "COMMAND LINE OPTIONS"
@@ -195,7 +195,7 @@ See the vchangerHowto\&.html file included in the doc directory of the source di
 \fBvchanger\&.conf(5)\fR
 .SH "COPYRIGHT"
 .sp
-Copyright 2006\-2015 Josh Fisher
+Copyright 2006\-2018 Josh Fisher
 .sp
 This is free software; See the source for copying conditions\&. There is NO warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE\&.
 .SH "AUTHOR"
